        specific metadata (location, start,end dates)

      - rss.xml and atom.xml also work for RSSAggregator

      - Removed XMLBuffer, as it is no longer used

      - added interfaces INewsViewer and IAgendaViewer. These interfaces
        can be used by SilvaLayout/Five to provide special views for 
        news/agenda viewers.

    Bugs fixed

      - fix for broken rss feed caused by get_intro() not getting the model

      - using 'get_intro' for RSS feeds introduced a bug in at least some
        RSS feeds. This has been worked around.

      - fix in NewsFilter.get_next_items, to catch _all_ agenda item
        cases

  2.5.1

   Bugs fixed

      - fixed 110570, properties tool not appearing in Kupu

      - fixed 101577, widgets missing from service_news_sub_viewer

      - fixed 101299, NoViewError exception when comparing newsitem versions

      - fixed 101731, NewsItems have "make local" settings tab option

      - fixed 101729, Display DT isn't updated when NewsItems are
                      in the future


      - fixed 101616, inline news viewers don't correct viewer listing

      - fixed 128591, status tab of News Items broken for authors

      - fixed 115608, news viewer property titles unclear

  2.5

    Features added

      - Made SilvaNews work with Silva 2.0/Zope 2.10.

    Bugs fixed

      - removed tal:attribute where tal:replace was called.

      - added 'en' to i18n to make the fallback work.

  2.4.1

    Bugs fixed

      - fix for broken rss feed caused by get_intro() not getting the
        model

  2.4

    Features added
    
      - SilvaNews 2.4 is compatible with Silva 1.6+ only. For Silva
        1.5 compatibility, the SilvaNews 2.3.x series should be used.

      - added interfaces INewsViewer and IAgendaViewer. These
        interfaces can be used by SilvaLayout/Five to provide special
        views for news/agenda viewers.

    Bugs fixed

      - using 'get_intro' for RSS feeds introduced a bug in at least