@@ -11,92 +11,97 @@
     viewerobj python:here.get_viewer_obj(viewer);
     limit python:int(options['number_of_articles']);
     items python:here.get_items(limit, viewer);
-    separate python:options['show_link_article'] == 'separate';
+    show_link_article python:options['show_link_article'];
     mangle modules/Products/Silva/mangle;
     formatdate nocall:here/service_news/format_date;
+    title_level options/title_level
 ">
+
 <p class="p newsmessage"
   tal:condition="not: viewerobj">
   Sorry, no viewer is available.
 </p>
 
 <tal:if tal:condition="viewerobj">
-<div tal:attributes="class options/inv_div | nothing">
+<div tal:attributes="class python:options['inv_div'] or nothing;
+                     id python:options['inv_div_id'] or nothing"
+>
 
 <h3 tal:condition="python:options['show_title']=='1'"
-  tal:content="python: viewerobj.get_title()">
+  tal:content="viewerobj/get_title">
   title
 </h3>
 
 <tal:loop condition="python:len(items) > 0"
   repeat="item items">
-<div class="newsitem">
-<h4 class="heading newsitemheading">
+<div tal:attributes="class python:'newsitem %s'%(repeat['item'].odd() and 'odd' or 'even')">
+<span tal:replace="structure string:<$title_level class='heading newsitemheading'>" />
   <a tal:define="title item/title"
     tal:content="structure title"
     tal:attributes="href item/link"
-    tal:omit-tag="separate"
+    tal:omit-tag="python:show_link_article != 'heading'"
     >
     title
   </a>
-</h4>
+<span tal:replace="structure string:</$title_level>" />
 
-<div class="newsiteminfo">
-    <p class="p eventdates">
-      <tal:block tal:condition="python:(int(options['show_creationdate']) and item.creation_datetime())">
-        <tal:translate i18n:translate="">Creation date: <br />
-        <span class="newsitemcreationdate" tal:content="structure python: formatdate(item.creation_datetime())" i18n:name="datetime">
-          creation date
-        </span>
-        </tal:translate>
-        <br /><br />
-      </tal:block>
-      <tal:block tal:condition="python: item.start_datetime() and options['show_datetime']=='1'">
-        <tal:translate i18n:translate="">Start:
-          <span class="newsitemstartdate" tal:content="structure python: formatdate(item.start_datetime())" i18n:name="datetime">
-            start date
-          </span>
-        </tal:translate>
-        <br />
-      </tal:block>
-      <tal:block condition="item/end_datetime">
-        <tal:translate i18n:translate="">End:
-          <span class="newsitemenddate" tal:content="structure python: formatdate(item.end_datetime())" i18n:name="datetime">
-            end date
-          </span>
-        </tal:translate>
-        <br />
-      </tal:block>
-      <tal:block condition="python: (int(options['show_location']) and item.location())">
-        <tal:translate i18n:translate="">Location:
-        <span class="newsitemlocation" tal:content="item/location" i18n:name="">
-          location
-        </span>
-        </tal:translate>
-      </tal:block>
-    </p>
+<div class="newsiteminfo" 
+  tal:condition="python:int(options['show_creationdate']) or int(options['show_datetime']) or int(options['show_location'])">
+   <p class="p eventdates">
+     <tal:block tal:condition="python:(int(options['show_creationdate']) and item.creation_datetime())">
+      <tal:translate i18n:translate="">Published:
+       <span class="newsitemcreationdate" 
+         tal:content="structure python: formatdate(item.creation_datetime())" i18n:name="datetime" />
+      </tal:translate>
+      <br />
+     </tal:block>
+     <tal:block tal:condition="python: item.start_datetime() and options['show_datetime']=='1'">
+      <tal:translate i18n:translate="">Starts:
+       <span class="newsitemstartdate" 
+         tal:content="structure python: formatdate(item.start_datetime())" i18n:name="datetime" />
+      </tal:translate>
+      <br />
+     </tal:block>
+     <tal:block condition="python: item.end_datetime() and options['show_datetime']=='1'">
+      <tal:translate i18n:translate="">Ends:
+       <span class="newsitemenddate" 
+         tal:content="structure python: formatdate(item.end_datetime())" i18n:name="datetime" />
+      </tal:translate>
+      <br />
+     </tal:block>
+     <tal:block condition="python: (int(options['show_location']) and item.location())">
+      <tal:translate i18n:translate="">Location:
+       <span class="newsitemlocation" tal:content="item/location" i18n:name="" />
+      </tal:translate>
+     </tal:block>
+   </p>
+</div>
+
+<div class="newsimage" 
+  tal:define="di options/display_image"
+  tal:condition="python:di=='thumbnail'">
+ <tal:def define="thumb item/thumbnail">
+  <img tal:condition="python:di=='thumbnail' and thumb"
+       tal:replace="structure thumb" />
+ </tal:def>
 </div>
 
 <tal:set define="maxchars python: int(options['number_of_characters'])">
-<div class="p newslead" tal:define="intro python:item.intro(maxchars)"
-  tal:content="structure intro"
-  tal:condition="python: options['show_intro']=='intro'">
-  Lead
-</div>
-<div class="p newslead" tal:define="intro python: item.description(maxchars)"
-  tal:content="structure intro"
-  tal:condition="python:(not item.intro() or options['show_intro']=='description')">
-  Lead
-</div>
+ <tal:cond condition="python: options['show_intro']=='intro'">
+  <div class="p newslead" tal:define="intro python:item.intro(maxchars)"
+    tal:content="structure intro"
+    tal:condition="intro" />
+ </tal:cond>
+ <tal:cond condition="python: options['show_intro']=='description'">
+  <div class="p newslead" tal:define="desc python:item.description(maxchars)"
+     tal:content="structure desc"
+     tal:condition="desc" />
+ </tal:cond>
 </tal:set>
 
-<p class="p articlelink">
-  <tal:if condition="separate">
-    <a tal:attributes="href item/link"
-      tal:content="structure options/link_text_article">
-      view item
-    </a>
-  </tal:if>
+<p class="p articlelink" tal:condition="python:show_link_article=='separate'">
+ <a tal:attributes="href item/link"
+    tal:content="structure options/link_text_article" />
 </p>
 
 </div>
@@ -116,7 +121,9 @@
   </a>
 </p>
 
-<metal:plug use-macro="here/feed_footer/macros/footer" /> 
+<tal:cond tal:condition="python:options['show_footer']=='1'">
+ <metal:plug use-macro="here/feed_footer/macros/footer" />
+</tal:cond>
 
 </div>
 </tal:if>
