@@ -46,6 +46,16 @@ SilvaNewsNetwork changes
         can be used by SilvaLayout/Five to provide special views for 
         news/agenda viewers.
 
+      - InlineNewsViewer was updated with some Z3 features, e.g. using the Z3 interface 
+        lookup.  
+
+      - The default INV formulator form and view templates have new features including:
+        containing div id and class, specifying article level, optional image thumbnail,
+        where and whether to place links to articles, and possible a few others.  If you're
+        using the default INV, you should refresh the template by going to the each INV's
+        url and adding '/refresh', e.g. http://server.com/silva/inv/refresh
+        
+
     Bugs fixed
 
       - fix for broken rss feed caused by get_intro() not getting the model
